...
            "state" : "translated",
            "value" : "Dodaj ${amount} za ${title} do ${group}"
          }
        }
      }
    },
    "Add Expense" : {
      "localizations" : {
        "pl" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Dodaj wydatek"
          }
        }
      }
    },
    "Add Member" : {
      "localizations" : {
        "pl" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Dodaj członka"
          }
...
            "state" : "translated",
            "value" : "To już ktoś inny"
          }
        }
      }
    },
    "Amount" : {
      "localizations" : {
        "pl" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Kwota"
          }
...
            "state" : "translated",
            "value" : "Nie udało się dołączyć"
          }
        }
      }
    },
    "Create" : {
      "localizations" : {
        "pl" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Utwórz"
          }
...
            "state" : "translated",
            "value" : "Grupa"
          }
        }
      }
    },
    "Group Name" : {
      "localizations" : {
        "pl" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Nazwa grupy"
          }
...
            "state" : "translated",
            "value" : "Nowe wydatki"
          }
        }
      }
    },
    "New Group" : {
      "localizations" : {
        "pl" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Nowa grupa"
          }
        }
      }
    },
    "No Groups" : {
      "localizations" : {
        "pl" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Brak grup"
          }
...
            "state" : "translated",
            "value" : "Przywróć zakupy"
          }
        }
      }
    },
    "Save" : {
      "localizations" : {
        "pl" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Zapisz"
          }
...
            "state" : "translated",
            "value" : "Napiwek"
          }
        }
      }
    },
    "Title (optional)" : {
      "localizations" : {
        "pl" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Tytuł (opcjonalnie)"
          }
...
    "addMemberButton" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Add"
          }
        },
        "pl" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Dodaj"
...
    "memberName" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Name"
          }
        },
        "pl" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Imię"
...
    "settleUp" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Settle Up"
          }
        },
        "pl" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Rozlicz"
...
    "symbolCoffee" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Coffee"
          }
        },
        "pl" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Kawa"
...
